<resources>
    <string name="app_name">Zentriumph</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="app_login">BusinessGame</string>
    <string name="app_propose">Make a Proposal</string>
    <string name="app_sector">My Industries</string>
    <string name="hint_user">Your username</string>
    <string name="hint_pass">Your password</string>
    <string name="btn_market">Market</string>
    <string name="btn_storage">Storage</string>
    <string name="btn_hq">Headquarter</string>
    <string name="btn_sector">Sector</string>
    <string name="btn_bank">Bank</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_unlocked">Unlocked</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_sell">Sell</string>
    <string name="btn_hire">Hire</string>
    <string name="btn_fire">Fire</string>
    <string name="btn_attach">Attach</string>
    <string name="btn_fix">Fix</string>
    <string name="btn_detach">Detach</string>
    <string name="btn_awaiting_confirmation">Awaiting confirmation</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_cancel_supply">Cancel Supply</string>
    <string name="btn_new_installment">Create new installment</string>
    <string name="btn_send_pm">Send Private Message</string>
    <string name="btn_make_contract">Make a Contract</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="imgdesc_user">User</string>
    <string name="imgdesc_product">Product</string>
    <string name="imgdesc_installment">Installment</string>
    <string name="imgdesc_employee">Employee</string>
    <string name="imgdesc_equipment">Equipment</string>
    <string name="username">Username : </string>
    <string name="pass">Password : </string>
    <string name="pass_re">Password (retype) : </string>
    <string name="acc_re">Remember acc.</string>
    <string name="auto_log">Auto-login</string>
    <string name="email">E-mail : </string>
    <string name="dob">Date of Birth : </string>
    <string name="about">About me :</string>
    <string name="reputation">Reputation Points : </string>
    <string name="level">Level : </string>
    <string name="avatar">Avatar : </string>
    <string name="from">From : </string>
    <string name="time">Time : </string>
    <string name="title">Title : </string>
    <string name="message">Message : </string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="date">Date : </string>
    <string-array name="year">
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
    </string-array>
    <string name="zone">Zone : </string>
    <string name="sector">Sector : </string>
    <string name="money">Money : </string>
    <string name="next_turn">Next turn in : </string>
    <string name="turn">Turn : </string>
    <string name="build_cost">Build cost : </string>
    <string name="prop_cost">Property cost : </string>
    <string name="turn_cost">Total cost per turn : </string>
    <string name="money_borrowed">Money borrowed : </string>
    <string name="storage_capacity">Capacity : </string>
    <string name="market">Market : </string>
    <string name="price">Price : </string>
    <string name="price_per_cbm">Price per CBM : </string>
    <string name="equipment">Equipment : </string>
    <string name="employee">Employee : </string>
    <string name="quality">Quality : </string>
    <string name="quantity">Quantity : </string>
    <string name="durability">Durability : </string>
    <string name="operational">Operational : </string>
    <string name="installment">Installment : </string>
    <string name="installment_supply">Energy Supply : </string>
    <string name="installment_type">Installment type : </string>
    <string name="subscription">Subscription : </string>
    <string name="price_kwh">Price per KWH : </string>
    <string name="kwh_available">KWH available : </string>
    <string name="kwh_need">KWH needed : </string>
    <string name="user">User : </string>
    <string name="sales">Sales : </string>
    <string name="raw_material">Raw Material : </string>
    <string name="electricity">Electricity : </string>
    <string name="fixed_cost">Fixed cost : </string>
    <string name="wage">Wage : </string>
    <string name="operation">Operation : </string>
    <string name="transport">Transport : </string>
    <string name="retribution">Retribution : </string>
    <string name="advertisement">Advertisement : </string>
    <string name="bank_interest">Bank interest : </string>
    <string name="depreciation">Depreciation : </string>
    <string name="profit_before_tax">Profit before tax : </string>
    <string name="tax">Tax : </string>
    <string name="profit">Profit : </string>
    <string name="current_assets">Current Assets : </string>
    <string name="fixed_assets">Fixed Assets : </string>
    <string name="cash">Cash : </string>
    <string name="on_storage">On storage : </string>
    <string name="equipment_on_storage">Equipment : </string>
    <string name="loan">Loan : </string>
    <string name="storage">Storage : </string>
    <string name="equipment_attached">Equipment : </string>
    <string name="total_assets">Total Assets : </string>
    <string name="product">Product : </string>
    <string name="ads_type">Ads type : </string>
    <string name="buy_storage">Buy Storage</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="update">Update changes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="advertise">Advertise now!</string>
    <string name="question_borrow">Are you sure you want to borrow this money? Once you successfully getting this money, you will no longer be able to borrow more money for several period.</string>
    <string name="question_pay_borrow">Please input the money you want to pay</string>
    <string name="question_logout">Are you sure you want to log out?</string>
    <string name="question_storage">You have no storage in your zone. Build now? It\'s only \'%.2f\' </string>
    <string name="question_product">How much?</string>
    <string name="question_equipment">Are you sure?</string>
    <string name="question_sector_blueprint">Are you sure you want to buy this blueprint?</string>
    <string name="question_bundle_installment">You are about to buy a bundle of equipment and hire a team of employee for an installment you choose before. Are you sure?</string>
    <string name="question_advertise">Are you sure you want to advertise now?</string>
    <string name="question">Are you sure?</string>
    <string name="help_0_title">Welcome</string>
    <string name="help_1_title">Getting Started</string>
    <string name="help_2_title">The Map</string>
    <string name="help_3_title">Turn</string>
    <string name="help_4_title">Bank</string>
    <string name="help_5_title">Headquarter</string>
    <string name="help_6_title">Storage</string>
    <string name="help_7_title">Market</string>
    <string name="help_8_title">Ads</string>
    <string name="help_9_title">Contract and PM</string>
    <string name="help_10_title">Conclusion</string>
    <string name="help_0">Hello! Welcome to Zentriumph, a Massively Multiplayer Online Business Simulation Game. \n\nHere, you\'ll compete with other players building your own business empire.</string>
    <string name="help_1_1">This is your main menu:</string>
    <string name="help_1_2">The first one is My Business menu where you manage all your business entities. \n\nMy Account, this menu will show all related data from your profile where you can later edit. \n\nHelp system, the one that you’re reading right now. \n\nAnd last is logout button.</string>
    <string name="help_2_1">When you click on My Business menu, you\'ll see a map of your world.</string>
    <string name="help_2_2">You can move around the map by panning your finger according to the direction you want to go. \n\nYou can also click on every building on map that will bring you to their specific window.</string>
    <string name="help_3_1">A turn occurs every ten minutes, consisting nine minutes of active time where player can do all the activity in Zentriumph such as buying/selling, etc. and one minute of passive time where player can\'t do things because the server takes time to prepare for a turn. \n\nThe turn indicated by the timer at the top left of the map or bottom bar on detailed window.</string>
    <string name="help_3_2">After the end of each turn your input goods will be converted to products, all cost that calculated based on turn will be also deducted automatically from your cash. \n\nWe think you\'ve grasp all the basic from Zentriumph, now… how to actually start your business empire? We will guide you to build your first business right away through our several next pages tutorial, so stick with us.</string>
    <string name="help_4_1">Unlike other bgame, in Zentriumph you start with zero capital. \nYou have to submit your proposal to bank to get some sums of money to get you started with your businesses.</string>
    <string name="help_4_2">This proposal will contain all the money you need to invest in a business, first you can select what sector you want to build first, and it\'ll list all the info regarding the sector. \nYou can scroll the upper tab to roll with the detail of every part needed to run that sector (such as: equipment, employee, etc.), you can also define how many turns the bank will cover your expenses on input goods. \n\nRemember, not all applied proposal will be accepted. Your chance to get accepted depends on what sector you choose and the total of money that\'ll be invested. \nEvery amount of money that you\'ve borrowed from bank will cost you 15% of interests that you\'ve to pay for each turn. \nYou can also pay the loans anytime; this will reduce the amount of interests of course.</string>
    <string name="help_5_1">After you get the cash needed to start investing from the bank, you need to go to headquarter to unlock your sector by buying their blueprints. \nWhen you get the blueprint, the corresponding sector will appear on the map. \nThe cost to unlock your first sector will be nulled, but it will increase according to the amount of sectors that you currently have.</string>
    <string name="help_5_2">You can also view how your business progress compared with others on the Headquarter by visiting the intelligence tab to show your position on the rank.</string>
    <string name="help_6_1">You\'ve your cash, you\'ve your business sector, next thing to do is to buy storage, and without storage you can\'t store all the goods and equipment needed to produce the product.</string>
    <string name="help_6_2">All goods and equipment have quantity that counted using CBM measurement. \nYou can increase your capacity by upgrading your storage.</string>
</resources>