<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TableLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp">
	    <TableRow >
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user"/>
	        <EditText android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="text"
	            android:hint="@string/hint_user"
	            android:id="@+id/user"/>
	    </TableRow>
	    <TableRow >
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pass"/>
	        <EditText android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            android:hint="@string/hint_pass"
	            android:id="@+id/pass"/>
	    </TableRow>
	</TableLayout>
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal"
	    android:layout_marginTop="20dp">
	    <CheckBox android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/acc_re"
	        android:id="@+id/check_acc_re"/>
	    <CheckBox android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/auto_log"
	        android:id="@+id/check_auto_log"/>
	</LinearLayout>
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:text="@string/login"
		android:id="@+id/btn_login"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
        android:text="@string/register"
        android:id="@+id/btn_register"/>
</LinearLayout>