<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TableRow android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"/>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="text"
            android:id="@+id/user"/>
    </TableRow>
    <TableRow >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"/>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_span="2"
            android:id="@+id/pass"/>
    </TableRow>
    <TableRow >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_re"/>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPassword"
            android:id="@+id/pass_re"/>
    </TableRow>
    <TableRow >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textEmailAddress"
            android:id="@+id/email"/>
    </TableRow>
    <TableRow >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"/>
        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/month"
            android:prompt="@string/month"
            android:id="@+id/spin_month"/>
        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/date"
            android:id="@+id/spin_date"/>
    </TableRow>
    <TableRow >
        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/year"
            android:prompt="@string/year"
            android:layout_column="1"
            android:id="@+id/spin_year"/>
    </TableRow>
    <TableRow >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone"/>
        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/zone"
            android:id="@+id/spin_zone"/>
    </TableRow>
    <TableRow android:layout_marginTop="10dp">
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:text="@string/register"
            android:id="@+id/btn_register"/>
    </TableRow>
</TableLayout>