<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    tools:context=".activities.RegisterActivity" >

    <TableRow android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="text" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_re" />

        <EditText
            android:id="@+id/pass_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob" />

        <Spinner
            android:id="@+id/spin_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/month"
            android:prompt="@string/month" />

        <Spinner
            android:id="@+id/spin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/date" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/spin_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:entries="@array/year"
            android:prompt="@string/year" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone" />

        <Spinner
            android:id="@+id/spin_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/zone" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:text="@string/register" />
    </TableRow>

</TableLayout>